﻿Subtitle Edit Changelog

3.5.9 (xth February 2019) BETA
* NEW:
   * Bookmarks - thx OmrSi/marb99
   * Auto save option
   * Spell check - keep "Use always" replace list option
   * Image export - option to have single lines top justified - thx joedmartin
   * Add shortcut: Modify selection
   * Add format "OGM chapters" - thx Franc
   * Add format "sptx" (read) - thx Peter
* IMPROVED:
   * Update Hungarian translation - thx Zityi
   * Update Korean translation - thx domddol
   * Update Portuguese translation - thx moob
   * Update French translation - thx JM GBT
   * Update Polish translation - thx admas
   * Update a few wrong translations (Spanish) - thx Ovidio
   * Create/adjust/translate shortcuts now global - thx OmrSi/uckthis
   * Auto break adheres to "Max number of lines" setting
   * Translate selected lines for MS translator + plugins
   * Make "select current sub while playing" smoother in waveform
   * Support .rtf files in "Import plain text" - thx Tilen
   * Improve Binary OCR of comma / apostrophe - thx Tuukka
   * Improve quote/italic detection in binary OCR - thx Miggu
   * Add context menu to OCR spell check
   * Improve DVD Studio Pro tag reading - thx Shas2509
   * "Toggle music tags" uses "music symbol" from tool settings
   * Improve language auto-detect - thx Xy
   * Improve parsing of badly formatted srt files - thx Darnn
* FIXED:
   * Fix missing/bad html tags after "Auto br" - thx iromafia111
   * Fix crash in OCR window when closing - thx spetragl
   * Fix OCR in batch convert - thx danstraughn
   * Fix crash parsing empty word in OCR via Tesseract - thx Barry
   * Fix reading ttml 2016-10 draft with "dur" tags - thx bbpqman
   * Fix underline with "Reverse start/end" - thx OmrSi
   * Fix possible crash in load of settings - thx eugenesvk
   * Fix/improve eng_OCRFixReplaceList.xml - thx Ding-adong
   * Fix minor tag issue in vtt - thx Arjan
   * Fix minor issues regarding pasting in list view - thx OmrSi