@@ -1198,6 +1198,7 @@ $HorzAlign          =   Center
             GeneralGoToPrevSubtitle = string.Empty;
             GeneralGoToStartOfCurrentSubtitle = string.Empty;
             GeneralGoToEndOfCurrentSubtitle = string.Empty;
+            GeneralToggleBookmarksWithText = "Control+Shift+B";
             MainFileNew = "Control+N";
             MainFileOpen = "Control+O";
             MainFileSave = "Control+S";
@@ -1243,7 +1244,7 @@ $HorzAlign          =   Center
             MainSynchronizationVisualSync = "Control+Shift+V";
             MainSynchronizationPointSync = "Control+Shift+P";
             MainSynchronizationChangeFrameRate = string.Empty;
-            MainListViewItalic = "Control+I";
+            MainListViewItalic = "Control+I";            
             MainEditReverseStartAndEndingForRTL = string.Empty;
             MainTextBoxItalic = "Control+I";
             MainTextBoxSplitAtCursor = "Control+Alt+V";
