@@ -9,6 +9,7 @@
    * Add shortcut: Modify selection
    * Add format "OGM chapters" - thx Franc
    * Add format "sptx" (read) - thx Peter
+   * Add Norwegian name list - thx SvenErik
 * IMPROVED:
    * Update Hungarian translation - thx Zityi
    * Update Korean translation - thx domddol
@@ -28,6 +29,7 @@
    * "Toggle music tags" uses "music symbol" from tool settings
    * Improve language auto-detect - thx Xy
    * Improve parsing of badly formatted srt files - thx Darnn
+   * Update names list - thx ivandrofly
 * FIXED:
    * Fix missing/bad html tags after "Auto br" - thx iromafia111
    * Fix crash in OCR window when closing - thx spetragl
